# ghc-language-plugin

./: .gitignore  .gitmodules  README.md  curry-ghc-language-plugin.cabal  curry-ghc-plugin.cabal  ghc-language-plugin.cabal  hie.yaml  notepad.hs  stack.yaml
sandbox/: sandbox.cabal
sandbox/src/: Example.hs  Example2.hs  Main.hs
src/Data/: Syb.hs
src/Plugin/: CurryPlugin.hs  Dump.hs  LanguagePlugin.hs
src/Plugin/CurryPlugin/: BuiltIn.hs  Encapsulation.hs  ForeignExport.hs  Free.hs  Main.hs  Monad.hs  Prelude.hs  THEval.hs  Tree.hs
src/Plugin/Effect/: Annotation.hs  Classes.hs  CurryEffect.hs  Monad.hs  THEval.hs  Transformers.hs  Tree.hs
src/Plugin/Trans/: Class.hs  ClsInst.hs  Coerce.hs  Config.hs  Constr.hs  ConstraintSolver.hs  CreateSyntax.hs  Derive.hs  DictInstFun.hs  Enum.hs  Expr.hs  FunWiredIn.hs  Import.hs  LExprEQ.hs  Pat.hs  PatternMatching.hs  Preprocess.hs  Record.hs  Rule.hs  TyCon.hs  Type.hs  TysWiredIn.hs  Util.hs  Var.hs  Warn.hs
src/Plugin/Util/: MonadNoinline.hs
test/: SemanticTests.hs  Tests.hs
test-examples/: Coin.hs  Data.hs  DefaultSignaturesExport.hs  DefaultSignaturesImport.hs  Export.hs  GeneralizedNewtypeDeriving.hs  Import.hs  ImportHaskell.hs  InstanceExport.hs  InstanceImport.hs  KindSignatures.hs  MultiParamFlexible.hs  OverloadedStrings.hs  PatternMatching.hs  PolyFailed.hs  Record.hs  ScopedTypeVariables.hs  Sections.hs  TupleSections.hs  TypeOperatorsExport.hs  TypeOperatorsImport.hs  Typeclass.hs  Wrapper.hs
test/Tests/: Bang.hs  Guards.hs  LetPattern.hs  UnknownNat.hs
